--- a/neerabanters/readme.html
+++ b/neerabanters/readme.html
@@ -2,7 +2,7 @@
 
 <p>A Baldur's Gate mod by AstroBryGuy</p>
 
-<p><strong>Version 0.9</strong></p>
+<p><strong>Version 0.9.1</strong></p>
 
 <p><a href="https://github.com/AstroBryGuy/NeeraBanters">https://github.com/AstroBryGuy/NeeraBanters</a></p>
 
@@ -69,6 +69,13 @@
 <p>All images, sounds, and game text used by this mod are copyright Beamdog or Wizards of the Coast.</p>
 
 <h2>Version History</h2>
+
+<p>Version 0.9.1</p>
+
+<ul>
+<li>Fixing parse error with sounds removal script.</li>
+<li>Fixing COPY error for DLC portrait under Windows.</li>
+</ul>
 
 <p>Version 0.9</p>
 
